--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
   },
   "homepage": "https://github.com/cdra0624/warp-os-pi#readme",
   "dependencies": {
+    "debug": "^2.3.1",
     "express": "^4.14.0",
+    "fs": "0.0.1-security",
     "johnny-five": "^0.10.5",
+    "repl": "^0.1.3",
     "serialport": "^2.1.2",
     "socket.io": "^1.5.1"
   }
