--- a/package.json
+++ b/package.json
@@ -22,6 +22,8 @@
     "express": "^4.14.0",
     "fs": "0.0.1-security",
     "johnny-five": "^0.10.5",
+    "node-pixel": "^0.8.1",
+    "nodebots-interchange": "^1.1.2",
     "repl": "^0.1.3",
     "serialport": "^2.1.2",
     "socket.io": "^1.5.1"
