--- a/package.json
+++ b/package.json
@@ -27,5 +27,9 @@
     "repl": "^0.1.3",
     "serialport": "^2.1.2",
     "socket.io": "^1.5.1"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.18.0",
+    "babel-preset-latest": "^6.16.0"
   }
 }
