--- a/package.json
+++ b/package.json
@@ -31,5 +31,10 @@
   "devDependencies": {
     "babel-cli": "^6.18.0",
     "babel-preset-latest": "^6.16.0"
+  },
+  "babel": {
+    "presets": [
+      "es2015"
+    ]
   }
 }
