--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "node index.js",
+    "start/babel": "babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,7 @@
     "johnny-five": "^0.10.5",
     "node-pixel": "^0.8.1",
     "nodebots-interchange": "^1.1.2",
+    "psvr": "^0.0.5",
     "repl": "^0.1.3",
     "serialport": "^2.1.2",
     "socket.io": "^1.5.1"
